# servcontrol_bot

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: 93e57b799ae7_first_migration.py
app/: config.py  db.py  run.py
app/bot/: buttons.py  keyboard.py  register.py  start.py  states.py  support_middlware.py  utils.py
app/bot/handlers/: pagination_handler.py
app/bot/handlers/admin/: admin_menu.py  admin_register.py  category.py  documents.py  users.py
app/bot/handlers/client/: client_menu.py  client_register.py  documents.py  info.py  support.py
app/core/: base.py  config.py  constants.py
app/core/db/: db.py  models.py  repository.py
app/core/db/migrations/: env.py
app/core/db/migrations/versions/: b938579eda53_first_migration.py
app/core/db/repository/: base.py
