[tool.poetry]
name = "servcontrol-bot"
version = "0.1.0"
description = ""
authors = ["Serg <ser5olovjew@yandex.ru>"]
readme = "README.md"
packages = [{include = "servcontrol_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.24"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.12.0"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
